# pneumonia_image_analysis

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: 01_eda.ipynb  02_train.ipynb  03_gradcam.ipynb
scripts/: download_data.py  evaluate.py  explain.py  train.py
src/cxr_pneumonia/: __init__.py  config.py  data.py  evaluate.py  explain.py  model.py  train.py
