[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxr-pneumonia"
version = "0.1.0"
description = "Chest X-ray pneumonia detection with Grad-CAM explanations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0",
    "kagglehub>=0.3.0",
    "grad-cam>=1.5.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0", "ipywidgets>=8.0.0"]
app = ["streamlit>=1.28.0"]

[tool.setuptools.packages.find]
where = ["src"]
